--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_install:
   - sudo apt-get install make build-essential pkg-config libtool automake -y
 
 install:
-  - wget -q -O - "http://bit.ly/Doveralls" | bash
+  - wget -O doveralls "https://github.com/ColdenCullen/doveralls/releases/download/v1.3.1/doveralls_linux_travis"
 
 script: ./travis-ci.sh
