--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ d:
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install make build-essential pkg-config libtool automake -y
+  - sudo apt-get install make build-essential pkg-config libtool autoconf automake gettext  -y
 
 install:
   - wget -O doveralls "https://github.com/ColdenCullen/doveralls/releases/download/v1.3.1/doveralls_linux_travis"
